--- a/easyscss/src/_navbar.scss
+++ b/easyscss/src/_navbar.scss
@@ -26,7 +26,7 @@
 ) {
     width: if($nav_width, $nav_width, 100%);
     height: if($nav_height, $nav_height, 50px);
-    background-color: if($bg-color, $bg-color, #4d4d4d);
+    background-color: if($bg-color, $bg-color, rgba(206, 103, 154, 0.5));
     position: relative;
     .nav-header {
         display: inline;
@@ -34,7 +34,7 @@
             display: inline-block;
             font-size: if($logo-font-size, $logo-font-size, 22px);
             font-weight: if($logo-font-weight, $logo-font-weight, 900);
-            color: if($logo-color, $logo-color, #fff);
+            color: if($logo-color, $logo-color, black);
             padding-left: if($logo-pd-hori, $logo-pd-hori, 10px);
             padding-right: if($logo-pd-hori, $logo-pd-hori, 10px);
             padding-top: if($logo-pd-vert, $logo-pd-vert, 10px);
@@ -49,7 +49,7 @@
         float: right;
         a {
             display: inline-block;
-            color: if($item-color, $item-color, #efefef);
+            color: if($item-color, $item-color, black);
             padding-left: if($item-pd-hori, $item-pd-hori, 10px);
             padding-right: if($item-pd-hori, $item-pd-hori, 10px);
             padding-top: if($item-pd-vert, $item-pd-vert, 13px);
@@ -58,7 +58,7 @@
             font-size: if($item-font-size, $item-font-size, 18px);
             font-weight: if($item-font-weight, $item-font-weight, 400);
             &:hover {
-                background-color: if($item-hover-bg, $item-hover-bg, rgba(0, 0, 0, 0.3));
+                background-color: if($item-hover-bg, $item-hover-bg, rgba(206, 103, 154, 0.7));
             }
         }
     }
@@ -81,7 +81,7 @@
                 padding-top: 13px;
                 padding-bottom: 13px;
                 &:hover {
-                    background-color: if($rp-menu-hover-bg, $rp-menu-hover-bg, rgba(0, 0, 0, 0.3));
+                    background-color: if($rp-menu-hover-bg, $rp-menu-hover-bg, rgba(206, 103, 154, 0.7));
                 }
                 span {
                     display: block;
@@ -89,7 +89,7 @@
                     height: 10px;
                     border-top-width: if($rp-menu-thickness, $rp-menu-thickness, 2px);
                     border-style: solid;
-                    border-color: if($rp-dropdown-bg, $rp-menu-color, #eee);
+                    border-color: if($rp-dropdown-bg, $rp-menu-color, black);
                 }
             }
         }
@@ -98,7 +98,7 @@
                 ~ {
                     .nav-btn {
                         > label {
-                            background-color: if($rp-menu-active-bg, $rp-menu-active-bg, rgba(0, 0, 0, 0.3));
+                            background-color: if($rp-menu-active-bg, $rp-menu-active-bg, rgba(206, 103, 154, 1));
                         }
                     }
                 }
@@ -108,7 +108,7 @@
             position: absolute;
             display: block;
             width: 100%;
-            background-color: if($rp-dropdown-bg, $rp-dropdown-bg, #333);
+            background-color: if($rp-dropdown-bg, $rp-dropdown-bg, rgba(206, 103, 154, 1));
             height: 0px;
             transition: all 0.3s ease-in;
             overflow-y: hidden;
